refactor: rename properties for LLM clients